# idalib-dump

./: .gitignore  CMakeLists.txt  README.md  agents.md
.github/workflows/: build.yml
ida-cmake/: bootstrap.cmake  idasdkConfig.cmake
ida-cmake/cmake/: compiler.cmake  platform.cmake
src/: interr.cpp  lumina.cpp  lumina_bot.cpp  lumina_debug.cpp  main.cpp  noplugins.c
